# keryx

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pipeline.py  pyproject.toml  skills-lock.json
data/: auth_state.json  projects.json  raw_extracted.json  raw_extracted.txt  resume.tex
src/agents/: copywriter.py  matchmaker.py  profile_extract.py  reviewer.py
src/core/: __init__.py  config.py  llm_client.py  logger.py  models.py  state.py  storage.py  workflow.py
src/data/: auth_state.json  raw_extracted.json  raw_extracted.txt
src/prompts/: copywriter_system.md  matchmaker_system.md  reviewer_system.md
src/scraper/: login.py  scraper.py
src/tools/: __init__.py  cleaner.py  context.py  human_behavior.py  login.py  memory.py  scraper.py  sender_rag.py  sheets.py  snapshot.py
src/utils/: __init__.py  human_behavior.py
